--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "arkavidia-8.0",
-  "description": "Frontend Arkavidia 8.0",
+  "name": "wisudaapril2023",
+  "description": "Frontend Wisuda April 2023",
   "version": "0.0.0",
   "scripts": {
     "dev": "next dev",
