--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@tailwindcss/typography": "^0.5.2",
     "next": "^12.1.5",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "swiper": "^9.1.1"
   },
   "devDependencies": {
     "@types/node": "^14.17.4",
