--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@tailwindui/react": "^0.1.1",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
